--- a/style/style.css
+++ b/style/style.css
@@ -98,14 +98,14 @@ main > section {
   /* height: 100%; */
   /* border: 2px solid red; */
   /* margin: 0 auto; */
-  margin-right: 200px;
+  margin-right: 150px;
 }
 .banner-left-container h1{
-  font-size: 5rem;
-  font-weight: 900;
+  font-size: 4.8rem;
+  font-weight: 800;
   color: white;
   row-height: 1px;
-  line-height: 5rem;
+  line-height: 4.8rem;
   margin-top: 5rem;
   margin-bottom: 28px;
 }
@@ -161,7 +161,7 @@ main > section {
   border-radius: 16px;
   position: absolute;
   top: 25%;
-  left: 70%;
+  right: 0%;
 }
 .banner-child-1 h1{
   font-size: 48px;
@@ -173,12 +173,10 @@ main > section {
   color: #FFFFFFA6;
 }
 .banner-child-2{
-  /* width: 206px;
-  height: 96px; */
   border: 1px solid rgba(255, 255, 255, 0.1);
   color: #ffffff;
   background: rgba(255, 255, 255, 0.1);
-  padding: 10px 30px;
+  padding: 10px 25px;
   border-radius: 8px;
   backdrop-filter: blur(20px);
   position: absolute;
@@ -190,7 +188,6 @@ main > section {
   font-weight: 800;
   margin-left: 40px;
   margin-bottom: 5px;
-  margin-top: 10px;
 }
 .banner-child-2 p{
   font-size: 16px;
@@ -204,7 +201,7 @@ main > section {
   border-radius: 50%;
   background: #e6533c;
   position: absolute;
-  top: 35%;
+  top: 20%;
   left: 10%; 
   
 }
