--- a/style/style.css
+++ b/style/style.css
@@ -31,8 +31,8 @@ main{
   justify-content: space-between;
 }
 main > section {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 /* navbar starts here */
 .navbar {
@@ -147,8 +147,6 @@ main > section {
   /* border: 2px solid blue; */
 }
 .banner-right-container {
-  /* border: 2px solid blue; */
-  /* margin-left: 185px; */
   position: relative;
 }
 .banner-child-1{
@@ -310,57 +308,99 @@ main > section {
 }
 .image-part {
   width: 50%;
-  /* border: 2px solid #9e06c4; */
 }
 .image-part img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 18px;
-  /* border: 2px solid #9e06c4; */
 }
 /* Trainer Container Start Here */
-.training-container{
-  /* border: 2px solid #9e06c4; */
-  /* min-height: 600px; */
-  margin-top: 100px;
-  color: #FFFFFFA6;
-}
-.training-container h2{
+.training-packages-container h1{
   font-size: 48px;
   font-weight: 900;
   color: #ffffff;
 }
-.training-container p{
-  font-size: 16px;
+.training-packages-container p{
+  font-size: 1rem;
   font-weight: 400;
-  color: rgba(255, 255, 255, 0.5);
+  color: #8b8c8c;
   margin-top: 14px;
-  width: 60%;
+  margin-bottom: 30px;
 }
-.training-container > .row-2-images{
-  height: 250px;
+.training-description> .p1{
+  color:#8b8c8c ;
 }
-.training-container img{
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  margin-top: 58px;
+.packages-container {
+  max-width: 1060px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
+  /* border: 2px solid #9e06c4; */
+  background-color: #272727;
+  padding: 40px 0;
+  border-radius: 18px;
 }
-.row-1-images{
-  display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+.packages-card-1 {
+  background-color: #272727; 
+  border-radius: 10px;
+  padding-top-left-radius: 10px;
+  padding-top-right-radius: 10px;;
 }
-.row-1-images> div img {
-  object-fit: cover;
-  width: 100%;
+.card-1-heading {
+  color: white;
+  text-align: center;
+  background-color: #e6533c;
+  border: 1px solid #e6533c;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  width: 200px;
+  padding-top: 10px; 
+}
+.card-1-heading p{
+  color: #ffffff;
+}
+.card-1-footer {
+  width: 200px;
+  border: 1px solid #e6533c;
+  /* padding: 10px; */
+  text-align: center;
+}
+.card-1-footer h1 {
+  font-size: 2rem;
+  font-weight: 900;
+  color: white;
+  margin-top: 14px;
+}
+.card-1-footer p {
+  font-size: 1rem;
+  color: #8b8c8c;
+}
+.card-1-footer h5{
+  font-size: 0.9rem;
+  color: #8b8c8c;
+  margin-top: 14px;
+  padding-bottom: 20px;
+}
+.card-1-footer button {
+  border: none;
+  background-color: #e6533c;
+  border-radius: 6px;
+  font-size: 1.4rem;
+  padding: 10px 20px 10px 20px;
+  color: white;
+}
+.card-button:hover {
+  color: white;
+  background-color: black;
+}
 
-}
-.row-2-images{
+/* .row-2-images{
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   /* overflow: hidden; */
-}
+} 
 /* BMI Calculator Section Start Here */
 .bmi-calculator-heading{
   width: 671px;
@@ -371,6 +411,7 @@ main > section {
   margin: 0 auto; 
 }
 .bmi-calculator-heading h2{
+  color: #ffffff;
   font-size: 48px;
   font-weight: 900;
   margin-bottom: 14px;
